@@ -14,9 +14,6 @@
 
 ======== Code ==========================================================
 
-(-) StructuredWorld.new: remove argument 'password'
-    (password loading only by next_level)
-
 (-) SchwerEngine::Map: remove 'dirty thing' (where is the problem? in map.rb?
     Map seems to be tested well. Bug may be in Viking, which is one big mess)
 
@@ -35,9 +32,6 @@
 (-) Menu: add a message if a bad password is given (also to the GUI,
     not only to a console)
 
-(-) Story: add information that Story can be skipped pressing Esc
-    ("press Esc to skip")
-
 (-) Shield tasks:
 
     (-) Olaf's shield shouldn't move awfully when Olaf's too quick
@@ -45,6 +39,9 @@
     (-) Transporter#update_transported_sprites: less cycles
 
     (-) Vikings should rest on Olaf's shield only if it's over his head
+
+(-) Move all requirement stuff to one file (freevikings.rb), so that it can be 
+    controlled easily
 
 (-) Remove StaticObject#unregister_in;
     instead, add Entity#unregister (without argument, every Entity will have
